data/derived/comb/progs/unify/prog7176.ml.out
Characters 49-50:
  let base = f = 0  in
                 ^
Error: This expression has type int but an expression was expected of type
         'a -> ('a -> 'b) -> 'b
